# htmx-axum-template

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  dev.sh  rust-toolchain.toml
app/: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  404.html  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
app/css/: index.css  prod.css
app/js/: index.js  walletConnect.js
app/templates/: base.html  index.html  name.html
app/ts/: index.ts
src/: lib.rs
